updated README.md (work in progress)